# Lyna

./: .deepsource.toml  .env.vault  .gitignore  Cargo.toml  Dockerfile  Dockerfile.old  README.md  accent.json  build.rs  docker-compose.yml  master.json  sqlx-data.json  temp.sql
.github/workflows/: build.yml
locales/: bg.json  cs.json  da.json  de.json  el.json  en.json  es.json  fi.json  fr.json  hu.json  id.json  it.json  ja.json  ko.json  nl.json  no.json  pl.json  ro.json  ru.json  sv-SE.json  tr.json  uk.json  zh-CN.json
migrations/: 20230220171821_create_settings.down.sql  20230220171821_create_settings.up.sql  20230322180234_create_welcome.down.sql  20230322180234_create_welcome.up.sql
src/: event.rs  handler.rs  main.rs
src/command/: debug.rs  mod.rs  ping.rs  settings.rs  test.rs
src/event/: interaction_create.rs  member_add.rs  ready.rs
