[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
async-trait = "0.1"
autometrics = { version = "0.2.3", features = ["prometheus-exporter"] }
chrono = "0.4"
dotenvy = "0.15"
env_logger = "0.10"
futures-util = "0.3.26"
metrics-runtime = "0.13.1"
serde_json = "1.0.87"
sparkle-convenience = "0.15.0"
tokio = { version = "1.25.0", features = ["tokio-macros", "full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
twilight-cache-inmemory = { version = "0.15.0", features = [
    "permission-calculator",
] }
twilight-gateway = { version = "0.15.0", default-features = false, features = [
    "rustls-webpki-roots",
    "twilight-http",
    "zlib-stock"
] }
twilight-gateway-queue = "0.15.0"
twilight-http = { version = "0.15.0", default-features = false, features = [
    "decompression",
    "rustls-webpki-roots"
] }
twilight-interactions = "0.15.0"
twilight-mention = "0.15.0"
twilight-model = "0.15.0"
twilight-standby = "0.15.0"
twilight-util = { version = "0.15.0", features = ["full"] }
twilight-validate = "0.15.0"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
